--- a/Cake-Website-main/style.css
+++ b/Cake-Website-main/style.css
@@ -1,6 +1,22 @@
 html {
   overflow-x: hidden;
   scroll-behavior: smooth;
+  
+}
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+.row {
+  flex-wrap: wrap !important;
+}
+
+.col-md-3 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 /* Navigation Bar */
